gcc/testsuite/algol68/compile/mcts/mdeq01.a68
# { dg-options "-fstropping=upper" }  #

# Mode equivalencing.  #
BEGIN MODE N = UNION(STRUCT(REAL re, im), COMPL); # { dg-error "" }  #
      SKIP
END
